--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "inquirer": "^7.3.3",
     "kleur": "^4.1.1",
     "open": "^7.2.1",
-    "playwright": "1.8.0",
+    "playwright": "^1.20.0-alpha-feb-25-2022",
     "playwright-video": "^2.4.0",
     "split": "^1.0.1",
     "tempy": "^0.7.0",
